k8s/00_ns.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: api
  labels:
    name: api
