k8s/dbdelta-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "dbdelta"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: "dbdelta-pod"
    spec:
      containers:
        - name: "dbdelta"
          image: "vitorta/dbdelta"
          ports:
            - name: "mysqlport"
              containerPort: 3306
          volumeMounts:
            - name: "vol-mysql"
              mountPath: "/var/lib/mysql"
      volumes:
        - name: "vol-mysql"
          persistentVolumeClaim:
            claimName: mysql-pvc
