k8s/nodedelta-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "nodedelta"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: "nodedelta-pod"
    spec:
      containers:
        - name: "nodedelta"
          image: "vitorta/nodedelta"
          ports:
            - name: nodeport
              containerPort: 8888
              protocol: TCP
