k8s/01_db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: api
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7.36
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
        resources: 
          requests:
            cpu: "250m"
            memory: "500Mi"
          limits:
            cpu: "350m"
            memory: "1Gi"
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: api
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
