k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: app
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dpl
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-ctn
        image: hurbcom/app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
