k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: db
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-dpl
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
      - name: db-pv
        persistentVolumeClaim:
          claimName: db-pvc
      containers:
      - name: db-ctn
        image: hurbcom/db:latest
        imagePullPolicy: Never
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-pv
        ports:
        - containerPort: 3306
