k8s/dbdelta-service.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: "dbdelta-service"
spec:
  ports:
    - port: 3306
      targetPort: "mysqlport"
      protocol: TCP
  selector:
    name: "dbdelta-pod"
