k8s/dbdelta.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: "dbdelta-service"
 
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: "dbdelta"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: "dbdelta"
  labels: 
    app: "dbdelta"
spec:
  replicas: 1
  selector:
    matchLabels:
        app: "dbdelta"
  template:
    metadata:
      labels:
        app: "dbdelta"
    spec:
      containers:
        - name: "dbdelta"
          image: "vitorta/dbdelta"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: "volclaim-mysql"
              mountPath: "/var/lib/mysql"
      volumes:
        - name: "volclaim-mysql"
          persistentVolumeClaim:
            claimName: mysql-volclaim
