k8s/dedsec-app.yml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: dedsec
---

# Database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dedsec-database
  namespace: dedsec
  labels:
    app: dedsec-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dedsec-database
  template:
    metadata:
      labels:
        app: dedsec-database
    spec:
      containers:
      - name: database
        image: mysql:5
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: dedsec
spec:
  type: ClusterIP
  selector:
    app: dedsec-database
  ports:
  - protocol: "TCP"
    port: 3306
    targetPort: 3306
---

# Application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dedsec-app
  namespace: dedsec
  labels:
    app: dedsec-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dedsec-app
  template:
    metadata:
      labels:
        app: dedsec-app
    spec:
      containers:
      - name: app
        image: thenets/challenge-delta:app
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dedsec
spec:
  type: LoadBalancer
  selector:
    app: dedsec-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8888
