k8s/nodedelta-service.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: "nodedelta-service"
spec:
  ports:
    - port: 8888
      targetPort: "nodeport"
      protocol: TCP
  selector:
    name: "nodedelta-pod"
