k8s/nodedelta.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: "nodedelta-service"
spec:
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      
  selector:
    app: "nodedelta"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: "nodedelta"
  labels:
    app: "nodedelta"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "nodedelta"
  template:
    metadata:
      labels:
        app: "nodedelta"
    spec:
      containers:
        - name: "nodedelta"
          image: "vitorta/nodedelta"
          ports:
          - containerPort: 8888
