k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-server
spec:
  selector:
    app: mysql-server
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-server
spec:
  selector:
    app: nodejs
  ports:
    - port: 8888
      targetPort: 8888
