k8s/02_api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-crud
  namespace: api
spec:
  selector:
    matchLabels:
      app: api-crud
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: api-crud
      labels:
        app: api-crud
    spec:
      containers:
        - name: api-crud
          image: apicrud:v1
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health/live
              port: 5000
            periodSeconds: 5
            failureThreshold: 10
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 5000
            periodSeconds: 5
            failureThreshold: 10
            initialDelaySeconds: 5
          resources: 
            requests:
              cpu: "100m"
              memory: "50Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: api-crud
  namespace: api
spec:
  type: LoadBalancer
  selector:
    app: api-crud
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
spec:
  defaultBackend:
    service:
      name: api-crud
      port:
        number: 5000
