k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /packages
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /packages
        backend:
          serviceName: app-svc
          servicePort: 80
